# osu2sm

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: dancepad.config.txt  default.config.txt
src/: conv.rs  filter.rs  main.rs  node.rs  osufile.rs  simfile.rs  transform.rs
src/node/: align.rs  filter.rs  osuload.rs  pipe.rs  rate.rs  rekey.rs  remap.rs  select.rs  simfilefix.rs  simfilewrite.rs  simultaneous.rs  space.rs
src/transform/: align.rs  analyze.rs  filter.rs  pipe.rs  rate.rs  remap.rs  simfilefix.rs  simultaneous.rs  snap.rs  space.rs
