[package]
name = "osu2sm"
version = "0.1.0"
authors = ["negamartin <martin.andrighetti@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
walkdir = "2"
fxhash = "0.2"
ron = "0.6"
serde = { version = "1", features = ["derive"] }
mp3-duration = "0.1"
flexi_logger = "0.16"
log = "0.4"
rand = "0.7"
rand_xoshiro = "0.4"
